--- a/resources/css/scss/_colors_bc.scss
+++ b/resources/css/scss/_colors_bc.scss
@@ -37,7 +37,8 @@ $btn-light-blue-hover-bg: #99b6e2;
 $btn-blue-border-hover-bg: #e4e9ef;
 
 $green-light: #d4eee0;
-
+$badge-pink-bg: #feecec;
+$badge-pink-border: #fddbdb;
 
 $green: #1e6c42;
 $green-dark: #0d5a30;
