--- a/resources/css/scss/modules/_popup_b.scss
+++ b/resources/css/scss/modules/_popup_b.scss
@@ -3,7 +3,8 @@
 * dialog
 * ------------------------------
 */
-.k-window.k-dialog {
+.k-window.k-dialog,
+.k-window {
     .content-group {
         padding: 20px 30px 30px;
     }
