--- a/resources/css/scss/modules/_table_bc.scss
+++ b/resources/css/scss/modules/_table_bc.scss
@@ -36,8 +36,11 @@ table {
 }
 .table-set {
     // margin-top: 12px;
+    .table-content.grid {
+        flex: 1;
+        height: auto;
+    }
 }
-
 
 .text-center th,
 .text-center td {
