--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -183,6 +183,7 @@ button {
 .mb-0 { margin-bottom: 0px !important; }
 .mb-4 { margin-bottom: 4px !important; }
 .mb-10 { margin-bottom: 10px !important; }
+.mb-30 { margin-bottom: 30px !important; }
 .ml-20 { margin-left: 20px !important; }
 .text-left { text-align: left !important; }
 .text-center { text-align: center !important; }
@@ -798,6 +799,20 @@ td .divide {
 		margin-top: 0;
 		padding-left: 8px;
 		background: $gray-f5;
+	}
+	.has-new {
+		position: relative;
+		&::after {
+			content: '';
+			display: block;
+			position: absolute;
+			right: -5px;
+			top: 0;
+			width: 4px;
+			height: 4px;
+			background-color: $error;
+			border-radius: 50%;
+		}
 	}
 }
 
