--- a/resources/css/scss/_layout_bc.scss
+++ b/resources/css/scss/_layout_bc.scss
@@ -37,6 +37,7 @@
 		align-items: center;
 		.logo-info {
 			line-height: 19px;
+			white-space: nowrap;
 		}
 		&.has-bar {
 			position: relative;
@@ -60,6 +61,7 @@
 	}
 	.user-set {
 		display: flex;
+		white-space: nowrap;
 	}
 	.profile-box {
 		@include bc-font-size-xsm
@@ -80,6 +82,7 @@
 			@include bc-font-size-xsm;
 			display: flex;
 			color: $white;
+			white-space: nowrap;
 			+ .list {
 				margin-left: 20px;
 			}
@@ -140,6 +143,22 @@
 
 /*
 * ------------------------------
+* #container
+* ------------------------------
+*/
+#container {
+	// width: 1920px;
+	top: 56px;
+	height: calc(100% - 56px);
+	padding: 18px 28px 20px;
+	overflow: auto;
+}
+.contents-wrap {
+	margin-left: 0;
+	min-width: 1920px;
+}
+/*
+* ------------------------------
 * section
 * ------------------------------
 */
@@ -187,5 +206,170 @@
 		}
 	}
 	
+}
+
+/*
+* ------------------------------
+* login page
+* ------------------------------
+*/
+.login-wrap {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: unset;
+}
+.login-content {
+	border-radius: 10px;
+	overflow: hidden;
+	&.type-a {
+		width: 450px; 
+		.login-image-box {
+			position: relative;
+			width: 100%;
+			height: 320px;
+			background-image: url($imgPath+'/img_login@2x.jpg');
+			background-size: contain;
+		}
+		.logo-set {
+			display: flex;
+			align-items: center;
+			position: absolute;
+			top: 30px;
+			left: 30px;
+			.logo {
+				img {
+					display: block;
+					max-width: 124px;
+				}
+			}
+			.info {
+				margin-left: 3px;
+				color: $white;
+				font-size: 16px;
+				line-height: 24px;
+				letter-spacing: -0.8px;
+				font-weight: 500;
+			}
+		}
+		.login-box {
+			.main-desc {
+				margin-top: 6px;
+				margin-bottom: 30px;
+				color: $gray-2;
+				font-size: 28px;
+				letter-spacing: -1.4px;
+				line-height: 40px;
+				.strong {
+					color: #3b6ac5;
+					font-weight: bold;
+				}
+			}
+		}
+	}
+	&.type-b {
+		display: flex;
+		.login-image-box {
+			position: relative;
+			width: 450px;
+			height: 440px;
+			padding: 40px 30px 30px;
+			background: #214997;
+			.sort {
+				color: #dee9ff;
+				font-size: 14px;
+				line-height: 19px;
+				letter-spacing: -0.7px;
+			}
+			
+			.main-desc {
+				margin-top: 10px;
+				color: #dee9ff;
+				font-size: 28px;
+				letter-spacing: -1.4px;
+				line-height: 40px;
+				.strong {
+					color: $white;
+					font-weight: bold;
+				}
+			}
+			.copyright {
+				position: absolute;
+				left: 30px;
+				bottom: 30px;
+				color: rgba(255, 255, 255, 0.5);
+				font-size: 13px;
+				line-height: 24px;
+				letter-spacing: -0.65px;
+			}
+		}
+		.login-box {
+			display: flex;
+			align-items: center;
+			width: 300px;
+			height: 440px;
+			border: 1px solid $gray-e4;
+			border-left: none;
+			border-radius: 0 10px 10px 0;
+			.form {
+				width: 100%;
+				margin: 0;
+			}
+			.main-title {
+				margin-bottom: 30px;
+				color: #3b6ac5;
+				font-size: 17px;
+				line-height: 24px;
+				letter-spacing: -0.85px;
+				font-weight: 500;
+				text-align: center;
+			}
+			.k-button.login {
+				width: 100%;
+				height: 40px;
+				margin-top: 10px;
+			}
+		}
+	}
+} 
+.login-box {
+	padding: 30px 40px 40px;
+	background: $white;
+	border: 1px solid $gray-e4;
+	border-top: none;
+	border-radius: 0 0 10px 10px;
+	
+	.form-group.col > * + * {
+		margin-top: 6px;
+	}
+	.login-label {
+		align-self: flex-start;
+		margin-top: 10px;
+		color: $gray-2;
+		font-size: 14px;
+		line-height: 20px;
+		letter-spacing: -0.7px;
+		font-weight: 500;
+	}
+	.sort {
+		color: $gray-7;
+		font-size: 15px;
+		line-height: 20px;
+		letter-spacing: -0.75px;
+	}
+	
+	.k-button.login {
+		width: 100%;
+		height: 36px;
+		margin-top: 10px;
+	}
+	.h-input {
+		@include bc-font-size-default;
+		height: 30px;
+	}
+	.k-button {
+		@include bc-font-size-default;
+
+	}
 }
 
